@@ -3928,11 +3928,15 @@ Slice::Gen::AsyncVisitor::visitOperation(const OperationPtr& p)
 	    out << sp << nl << "final class " << classNameAMDI << '_' << name
 		<< " extends IceInternal.IncomingAsync implements " << classNameAMD << '_' << name;
 	    out << sb;
+
 	    out << sp << nl << "public" << nl << classNameAMDI << '_' << name << "(IceInternal.Incoming in)";
 	    out << sb;
 	    out << nl << "super(in);";
 	    out << eb;
+
 	    out << sp << nl << "public void" << nl << "ice_response(" << paramsAMD << ")";
+	    out << sb;
+	    out << nl << "if(!_finished)";
 	    out << sb;
 	    if(ret || !outParams.empty())
 	    {
@@ -3957,7 +3961,11 @@ Slice::Gen::AsyncVisitor::visitOperation(const OperationPtr& p)
 	    }
 	    out << nl << "__response(true);";
 	    out << eb;
+	    out << eb;
+
 	    out << sp << nl << "public void" << nl << "ice_exception(java.lang.Exception ex)";
+	    out << sb;
+	    out << nl << "if(!_finished)";
 	    out << sb;
 	    if(throws.empty())
 	    {
@@ -3985,6 +3993,8 @@ Slice::Gen::AsyncVisitor::visitOperation(const OperationPtr& p)
 		out << eb;
 	    }
 	    out << eb;
+	    out << eb;
+
 	    out << eb << ';';
 	    
 	    close();
