@@ -3,3 +3,6 @@ Changes since version 1.0.0
 
 - Fixed a bug in the ObjectAdapter which caused it to ignore all but the
   first endpoint.
+
+- Fixed a bug with throwing exceptions in AMD calls after invoking
+  ice_response().
