@@ -17,3 +17,6 @@ Changes since version 1.0.0
 
 - Renamed Lock and TryLock templates to LockT and TryLockT, to avoid
   compilation problems with Sun Forte 6.2.
+
+- Fixed a bug with throwing exceptions in AMD calls after invoking
+  ice_response().
